Added links to sources in DA 11-16

--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -8,9 +8,9 @@ next: DA_13.html
 ---
 
 # [The Long Discourses](index.html)
-### 12. Three Categories
+## 12. Three Categories
 
-1\. Thus I have heard:  One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a large group of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a large group of 1,250 monks.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I will give all of you a discourse on the sublime teaching, the content and expression of which is pure and perfects the religious life. It’s the teaching in three categories. All of you, listen closely and consider it. I will teach this for you.”
@@ -143,6 +143,12 @@ The monks then accepted the teaching and listened.
 
 44\. The monks who heard what the Buddha taught rejoiced and approved.
 {:#p44}
+
+---
+
+### Notes
+
+1. {:#n1}This is <em>sūtra</em> no. 12 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0059b14" target="_blank">T1.1.59b14-60a27</a>). [\[back\]](#ref1)
 
 ---
 
