--- a/01_agama/dirgha/DA_13.md
+++ b/01_agama/dirgha/DA_13.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Long Discourses | 13. The Great Method of Conditionality
+title: The Long Discourses | 13. The Great Method of Origination
 type: kramdown
 base: ../../
 previous: DA_12.html
@@ -8,7 +8,7 @@ next: DA_14.html
 ---
 
 # [The Long Discourses](index.html)
-### 13. The Great Method of Conditionality
+## 13. The Great Method of Origination
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Kuru at Kalmāṣa’s Residence.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
 {:#p1}
@@ -366,9 +366,11 @@ next: DA_14.html
 92\. When Ānanda heard what the Buddha taught, he rejoiced and approved.
 {:#p92}
 
+---
+
 ### Notes
 
-1. {:#n1}Parallels for this sutra include [DN 15](https://suttacentral.net/dn15){:target="_blank"}, MĀ 97, T14, and T52. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 13 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0060a28" target="_blank">T1.1.60a28-2b27</a>). Parallels for this <em>sūtra</em> include <a href="https://suttacentral.net/dn15" target="_blank">DN 15</a>, <a href="https://suttacentral.net/ma97" target="_blank">MĀ 97</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T0014_001" target="_blank">T14</a>, and <a href="https://cbetaonline.dila.edu.tw/zh/T0052_001" target="_blank">T52</a>. [\[back\]](#ref1)
 2. {:#n2}*Kuru*. Ch. 拘流沙, P. Kurūsu, Skt. Kuruṣu.\\
 *Kalmāṣa’s Residence*. Ch. 劫摩沙住處, P. Kammāsadamma, Skt. Kalmāṣadamya. [\[back\]](#ref2)
 3. {:#n3}While this introduction presents the classic twelve links of dependent origination, there will only be ten links discussed later in the sutra. When we compare the introductions in the direct parallels, we find four different versions while the body of the sutra presents the same ten links. This suggests to me that the introduction is a later addition to an older sutra. [\[back\]](#ref3)
