--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -13,7 +13,7 @@ next: DA_15.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying north of the village of Āmbara of Magadha in the Indrasāla cave on Mount Vaidehaka.
 {:#p1}
 
-### Lord Śakra Visits the Buddha
+#### Lord Śakra Visits the Buddha
 
 2\. It was then that Śakra the Lord of Gods had a wonderful thought to come and see the Buddha: “Now, I will go to the Bhagavān!”
 {:#p2}
@@ -129,7 +129,7 @@ The Buddha told Lord Śakra, “Your host of gods is large, but they can sit nea
 18\. The Bhagavān then made the Indrasāla Cave enlarge itself so that none of them were obstructed by it. Lord Śakra, the Trāyastriṃśa gods, and Pañcaśikha all bowed at the Buddha’s feet and sat to one side.
 {:#p18}
 
-### The Story of Gopaka and the Disciples
+#### The Story of Gopaka and the Disciples
 
 19\. Lord Śakra said to the Buddha, “One time, the Buddha was staying at a priest’s residence in Śrāvastī. At the time, the Bhagavān had entered the samādhi of blazing fire. For some reason, I was riding my thousand-spoked treasure chariot to visit Virūḍhaka. As I went by in the sky, I saw a goddess standing with her palms together in front of the Bhagavān. I immediately said to that goddess, ‘If the Bhagavān rouses from samādhi, you should exchange these greetings with the Bhagavān in my name: “Has your daily life been easy? Are you in good health?”’ I wondered later if she had conveyed this thought for me. Bhagavān, do you recall if she did?”
 {:#p19}
@@ -226,7 +226,7 @@ They were born as Ābhāsvara gods.\\
 When I observed them,\\
 They were going to the Buddha.’”
 
-### The Origin of Enmity and Conflict
+#### The Origin of Enmity and Conflict
 
 26\. Lord Śakra said to the Buddha, “If you have a moment, I would like to clarify a doubt of mine.”
 {:#p26}
@@ -286,7 +286,7 @@ The Buddha told Lord Śakra, “Craving arises from conception. Conception is it
 41\. “It’s only because of error that conception arises. Error is its cause and condition. Error is its source. From this, there is conception. From conception, there is desire. From desire, there is love and hate. From love and hate, there is greed and jealousy. It’s because of greed and jealousy that all sentient beings are led to hurt each other. Now that I’ve heard the Buddha’s explanation, my confusion is completely removed. I won’t wonder about it anymore.”
 {:#p41}
 
-### The Nature of Error
+#### The Nature of Error
 
 42\. Lord Śakra again asked the Buddha, “Do all the ascetics and priests on the path to cessation completely eliminate error, or is error not eliminated on the path to cessation?”
 {:#p42}
@@ -311,7 +311,7 @@ The Buddha addressed Lord Śakra, “Not all the ascetics and the priests on the
 48\. Śakra the Lord of Gods then said, “Having heard the Buddha’s explanation, I won’t wonder about this anymore.”
 {:#p48}
 
-### Noble Detachment
+#### Noble Detachment
 
 49\. He also asked the Buddha, “How many kinds of noble detachment are there?”
 {:#p49}
@@ -328,7 +328,7 @@ The Buddha addressed Lord Śakra, “Not all the ascetics and the priests on the
 53\. Lord Śakra said to the Buddha, “Having heard the Buddha’s explanation, I won’t wonder about this anymore.”
 {:#p53}
 
-### Perfection of the Sense Faculties
+#### Perfection of the Sense Faculties
 
 54\. He also asked the Buddha, “How many things are called ‘the noble Vinaya’s perfection of the faculties’?”
 {:#p54}
@@ -351,7 +351,7 @@ The Buddha addressed Lord Śakra, “Not all the ascetics and the priests on the
 60\. Lord Śakra said to the Buddha, “Hearing the Buddha’s explanation, I won’t wonder about this anymore.”
 {:#p60}
 
-### The Ultimate Goal
+#### The Ultimate Goal
 
 61\. Again, he asked the Buddha, “How many things does a monk call ‘the ultimate goal, the ultimate goal of the religious life, the ultimate goal of peace, and the ultimate goal that has no remainder’?”
 {:#p61}
@@ -361,7 +361,7 @@ The Buddha told Lord Śakra, “To personally extinguish the suffering caused by
 62\. Lord Śakra said to the Buddha, “In the long night of the past, I was caught in a snare of doubt. Now, the Buddha has released me from that doubt.”
 {:#p62}
 
-### The Buddha Questions Lord Śakra
+#### The Buddha Questions Lord Śakra
 
 63\. The Buddha told Lord Śakra, “Haven’t you visited ascetics and priests to ask about this subject?”
 {:#p63}
@@ -467,7 +467,7 @@ I know it myself using the pure eye.”
 74\. After speaking these verses, he said to the Buddha, “I want to obtain the fruits of these five virtues from this joy and happiness.”
 {:#p74}
 
-### Conclusion
+#### Conclusion
 
 75\. Lord Śakra then said to the Trāyastriṃśa gods, “You’ve venerated in front of Brahmā Kumāra above the Trāyastriṃśa heaven before. Wouldn’t it be excellent to also venerate in front of the Buddha?”
 {:#p75}
@@ -496,7 +496,7 @@ Asked the Tathāgata about his meaning.”
 
 ### Notes
 
-1. {:#n1}Parallels for this sutra include [DN 21](https://suttacentral.net/dn21){:target="_blank"}, MĀ 134, T15, and T203.73. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 14 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0062b28" target="_blank">T1.1.62b28-6a3</a>). Parallels for this <em>sūtra</em> include <a href="https://suttacentral.net/dn21" target="_blank">DN 21</a>, <a href="https://suttacentral.net/ma134" target="_blank">MĀ 134</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T0015_001" target="_blank">T15</a>, and <a href="https://cbetaonline.dila.edu.tw/zh/T04n0203_p0476a17" target="_blank">T203.73</a>. [\[back\]](#ref1)
 2. {:#n2}*Bhadrā … your father*. Bhadrā was the daughter of the king of gandharvas. Śakra indicates at the conclusion of the present sutra that Pañcaśikha was her suitor. [\[back\]](#ref2)
 3. {:#n3}*error*. Ch. 調戲. This is presumably a translation of Skt. prapañca (P. papañca). This is difficult term to pin down in Indic sources, being variously interpreted as proliferation, activity, and error or false ideas. The Chinese translation adds to the difficulty because it could be read as restlessness or agitation (Skt. auddhatya, P. uddhacca) but can mean reckless or wild behavior. Given the way the term appears to take on both epistemological and moral meanings in the passages that follow, I’ve opted for “error” as a translation, assuming the original was indeed Skt. prapañca. The Japanese translators agree, translating it as “false ideas.” [\[back\]](#ref3)
 
