--- a/01_agama/dirgha/DA_15.md
+++ b/01_agama/dirgha/DA_15.md
@@ -13,7 +13,7 @@ next: DA_16.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the land of Anomiya of Maineya.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
 {:#p1}
 
-### Why Sunakṣatra Returned to the Lay Life
+#### Why Sunakṣatra Returned to the Lay Life
 
 2\. It was then that the Bhagavān put on his robe and took his bowl into the city of Anomiya to solicit alms. The Bhagavān then silently thought, “It’s too early in the day to solicit alms now. It would be better to visit the Wanderer Bhārgava’s park. I’ll solicit alms when it’s the right time for a monk to do so.”
 {:#p2}
@@ -72,7 +72,7 @@ next: DA_16.html
 16\. “Wanderer, you should know that after I had this talk with him, he didn’t follow my instruction. He abandoned the precepts and returned to the lay life.
 {:#p16}
 
-### Sunakṣatra and the Nirgrantha Disciple Kalāra
+#### Sunakṣatra and the Nirgrantha Disciple Kalāra
 
 17\. “Wanderer, I was once at the Dharma meeting hall that’s beside Monkey Lake. There was a Nirgrantha disciple named Kalāra who had stopped there.[\[4\]](#n4){:#ref4} He was respected by people, and his fame was far-reaching. He had many friends who provided him with offerings. At the time, the monk Sunakṣatra had put on his robe and took his bowl into Vaiśālī to solicit alms. He made his way on the alms round until he met this Nirgrantha disciple.
 {:#p17}
@@ -113,7 +113,7 @@ next: DA_16.html
 27\. “Wanderer, you should know, I had demonstrated evidence of my miraculous abilities to Sunakṣatra, yet he said, ‘The Bhagavān didn’t demonstrate them for me.’
 {:#p27}
 
-### Sunakṣatra and the Nirgrantha Disciple Khoradattika
+#### Sunakṣatra and the Nirgrantha Disciple Khoradattika
 
 28\. “Another time, I was at a town of the White Land in Maineya. A Nirgrantha disciple named Khoradattika was living there at the time. He was respected by people, his fame was far-reaching, and he received many offerings. I put on my robe and took my bowl into town to solicit alms, and the monk Sunakṣatra followed me. We saw the Nirgrantha disciple Khoradattika on a mound of refuse licking up coarse food.
 {:#p28}
@@ -190,7 +190,7 @@ next: DA_16.html
 44\. “Wanderer, thus did I demonstrate evidence of my miraculous abilities to the monk Sunakṣatra on numerous occasions, yet he still says, ‘The Bhagavān didn’t demonstrate miraculous abilities for me.’”
 {:#p44}
 
-### Sunakṣatra and the Wanderer Pāṭiputra
+#### Sunakṣatra and the Wanderer Pāṭiputra
 
 45\. The Buddha told the wanderer, “I was once in the Dharma meeting hall that’s beside Monkey Lake. At the time, a wanderer named Pāṭiputra had stopped there. He was respected by people, his fame was far-reaching, and he received many offerings. In a large crowd of Vaiśālīs, he made this statement: ‘The ascetic Gautama says he is wise. I am wise, too. The ascetic Gautama says he has miraculous abilities. I have miraculous abilities, too. The ascetic Gautama has achieved the transcendental path. I have achieved the transcendental path, too. He and I will demonstrate miraculous abilities together. The ascetic will demonstrate one ability, and then I will demonstrate two. When the ascetic demonstrates two, I will demonstrate four. When the ascetic demonstrates eight, I will demonstrate 16. When the ascetic demonstrates 16, I will demonstrate 32. When the ascetic demonstrates 32, I will demonstrate 64. However many that that ascetic demonstrates, I will demonstrate twice as many.’
 {:#p45}
@@ -311,7 +311,7 @@ It could only bark like a jackal.’
 76\. “Wanderer, I then explained a variety of teachings for that large assembly, instructing, benefiting, and making them rejoice. In that assembly, I roared the lion’s roar three times. I then ascended into the sky and returned home.”
 {:#p76}
 
-### The Origin of the World and Beings
+#### The Origin of the World and Beings
 
 77\. The Buddha told the wanderer, “Sometimes ascetics and priests say, ‘The whole world was created by Brahmā, the Sovereign God.’
 {:#p77}
@@ -403,7 +403,7 @@ It could only bark like a jackal.’
 
 ### Notes
 
-1. {:#n1}Parallels for this sutra include [DN 24](https://suttacentral.net/dn24){:target="_blank"} and a few Sanskrit fragments. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 15 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0066a09" target="_blank">T1.1.66a9-70a18</a>). Parallels for this <em>sūtra</em> include <a href="https://suttacentral.net/dn24" target="_blank">DN 24</a> and a few Sanskrit fragments. [\[back\]](#ref1)
 2. {:#n2}*Anomiya … Maineya*. Ch. (MCh.) 阿㝹夷 (a-neu-i) … 冥寧 (mieng-nieng), P. Anupiya … Mallesu. I’ve adopted the Sanskrit place names found in the *Mahāvastu*, which match the Chinese transliterations better than the Pali. [\[back\]](#ref2)
 3. {:#n3}*Licchavi … Sunakṣatra*. Ch. 隸車 (MCh. liei-t’śia) 子 善宿. The Chinese is a hybrid of transliteration and translation. “Licchavi-” is transliterated (隸車), while “-putra” (子) and “Sunakṣatra” (善宿) are translated. 善宿 literally means “good” (su-) “constellation” (-nakṣatra), which agrees with the Sanskrit meaning of the name (“[born under a] good astrological sign”). [\[back\]](#ref3)
 4. {:#n4}*Nirgrantha disciple*. That is, a disciple of Nirgrantha Jñāniputra, the founder of the Jain religion. [\[back\]](#ref4)
