Added source text links to DA 17-26.

--- a/01_agama/dirgha/DA_19.md
+++ b/01_agama/dirgha/DA_19.md
@@ -8,7 +8,7 @@ next: DA_20.html
 ---
 
 # [The Long Discourses](index.html)
-### 19. The Great Congregation
+## 19. The Great Congregation
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kapilavastu in the country of the Śākyans. He was accompanied by a large assembly of five hundred monks, all of whom were arhats. Marvelous gods had also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks.
 {:#p1}
@@ -264,7 +264,7 @@ And respected by the community.”
 
 ### Notes
 
-1. {:#n1}Parallel texts include [DN 20](https://suttacentral.net/dn20){:target="_blank"}, [DN 32](https://suttacentral.net/dn32){:target="_blank"}, T 19, SN 1.37, SĀ 1192, and T100.105. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 19 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0079b01" target="_blank">T1.1.79b1-81b29</a>). Parallel texts include <a href="https://suttacentral.net/dn20" target="_blank">DN 20</a>, <a href="https://suttacentral.net/dn32" target="_blank">DN 32</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T0019_001" target="_blank">T19</a>, <a href="https://suttacentral.net/sn1.37" target="_blank">SN 1.37</a>, <a href="https://suttacentral.net/sa1192" target="_blank">SĀ 1192</a>, and <a href="https://cbetaonline.dila.edu.tw/zh/T02n0100_p0411a24" target="_blank">T100.105</a>. [\[back\]](#ref1)
 2. {:#n2}What follows is transliterated by the Chinese translator as a magical formula. When the Middle Chinese pronunciations are used instead of modern Mandarin, we can discern clear parallels to Pali verses found in both DN 20 and 32. However, the original language that was transliterated was an unknown dialect of Central Asia (perhaps Tocharian or Gandhari). This makes deciphering the P. or S. equivalents difficult at times, especially when the verses differ from Indic parallels and include names unfamiliar to us. I’ve used brackets to indicate reconstructions and question marks for guesswork. I have largely followed the Japanese translation by Karashima. [\[back\]](#ref2)
 3. {:#n3}Aside from the first and last lines and a couple common words, this section unfortunately is completely obscure and lacks an Indic parallel. This makes a reconstruction of P. or S. equivalent names too difficult to attempt. I’ve chosen to transliterate the Middle Chinese pronunciations with IPA symbols that linguists may find helpful. Perhaps a parallel will be discovered that will help us decipher this passage in the future. [\[back\]](#ref3)
 
