--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -7,7 +7,7 @@ previous: DA_18.html
 next: DA_21.html
 ---
 # [The Long Discourses](index.html)
-### 20. Ambāṣṭha
+## 20. Ambāṣṭha
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala accompanied by a large assembly of 1,250 monks. They went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.[\[2\]](#n2){:#ref2}
 {:#p1}
@@ -663,8 +663,11 @@ His teacher said, “I had an intelligent disciple to send as my messenger, but 
 181\. When the monks heard what the Buddha had taught, they rejoiced and approved.
 {:#p181}
 
+---
+
 ### Notes
-1. {:#n1}Direct parallels include [DN 3](https://suttacentral.net/dn3) and an alternate Chinese translation, T 20. [\[back\]](#ref1)
+
+1. {:#n1}This is <em>sūtra</em> no. 20 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0082a06" target="_blank">T1.1.82a6-8b7</a>). Direct parallels include <a href="https://suttacentral.net/dn3" target="_blank">DN 3</a> and an alternate Chinese translation (<a href="https://cbetaonline.dila.edu.tw/zh/T0020_001" target="_blank">T20). [\[back\]](#ref1)
 2. {:#n2}*Icchānaṅgala*. While I’ve not found a Skt. attestation, the Chinese transliteration matches the Pali closely, so I’ve adopted it.
 Citron grove. In Pali, the grove is named after the town, but in Chinese it’s called Iccha[ka], the name of the citron, which is a shrub that was the progenitor of later citrus fruits like lemons and limes. [\[back\]](#ref2)
 3. {:#n3}*Utkaṭa*. Ch. 郁伽羅 (MCh. ɪuk-k’ie-la = *Ukkala), P. Utkaṭṭhā. Utkaṭa is the Skt. attestation, but the Chinese suggests “Utkala.” [\[back\]](#ref3)
