--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -7,7 +7,7 @@ previous: DA_20.html
 next: DA_22.html
 ---
 # [The Long Discourses](index.html)
-### 21. Brahmā’s Shaking
+## 21. Brahmā’s Shaking
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Magadha accompanied by an assembly of 1,250 great monks. Wandering among the people, they reached the bamboo grove and stopped to stay at the royal palace.[\[2\]](#n2){:#ref2}
 {:#p1}
@@ -121,7 +121,7 @@ next: DA_22.html
 35\. “What are the reasons those ascetics and priests make diverse and countless statements as they like about past eons, and enter these 18 views that they don’t go beyond?
 {:#p35}
 
-##### Self and World Are Eternal
+#### Self and World Are Eternal
 
 36\. “Ascetics and priests create this eternalist theory about past eons: ‘Self and the world always exists.’ They all enter four views. Regarding past eons, they say that self and the world always exists and don’t go beyond these four views that they enter.
 {:#p36}
@@ -150,7 +150,7 @@ next: DA_22.html
 44\. “This is that other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata.
 {:#p44}
 
-##### Self and World Are Half Eternal and Half Impermanent
+#### Self and World Are Half Eternal and Half Impermanent
 
 45\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata?
 {:#p45}
@@ -188,7 +188,7 @@ next: DA_22.html
 56\. “This is that other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata.
 {:#p56}
 
-##### Self and the World Are Limited and Limitless
+#### Self and the World Are Limited and Limitless
 
 57\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata?
 {:#p57}
@@ -217,7 +217,7 @@ next: DA_22.html
 65\. “This is that other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata.
 {:#p65}
 
-##### Equivocations
+#### Equivocations
 
 66\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata?
 {:#p66}
@@ -255,7 +255,7 @@ next: DA_22.html
 77\. “This is that other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata.
 {:#p77}
 
-##### The World Has No Cause
+#### The World Has No Cause
 
 78\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata?
 {:#p78}
@@ -292,7 +292,7 @@ next: DA_22.html
 88\. “What are the reasons those ascetics and priests create theories about conception in future eons, claim that the world will have conceptions, and don’t go beyond these sixteen views?
 {:#p88}
 
-##### The World Will Have Conceptions
+#### The World Will Have Conceptions
 
 89\. “Some ascetics and priests create such theories and such views as this: ‘After this life ends, I’ll be born with form and conceptions. This is true; the rest is false.’ This is the first view. As a result of creating theories about conception in future eons and claiming that the world will have conceptions, those ascetics and priests don’t go beyond these sixteen views.
 {:#p89}
@@ -342,10 +342,10 @@ next: DA_22.html
 104\. “Some say, ‘After this life ends, I’ll be born with measureless conceptions. This is true; the rest is false.’ This is the sixteenth view.
 {:#p104}
 
-105\. “Some ascetics and priests create theories about conception in future eons and claim that the world will have conceptions. They don’t go beyond these sixteen views. There’s only the Buddha who can know this … *as before*.
+105\. “Some ascetics and priests create theories about conception in future eons and claim that the world will have conceptions. They don’t go beyond these sixteen views. There’s only the Buddha who can know this … <em>as before</em>.
 {:#p105}
 
-##### The World Won’t Have Conceptions
+#### The World Won’t Have Conceptions
 
 106\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great? Ascetics and priests create theories about lacking conception in future eons and claim that the world will lack conceptions. They enter a total of eight views about future eons in doing so. Creating theories about lacking conception [and claiming that the world won’t have conceptions, those ascetics and priests] they don’t go beyond these eight views.
 {:#p106}
@@ -377,10 +377,10 @@ next: DA_22.html
 115\. “Some say, ‘After this life ends, I’ll be born neither with nor without limits and without conceptions. This is true; the rest is false.’ This is the eighth view.
 {:#p115}
 
-116\. “If ascetics and priests create theories about lacking conception in future eons and claim that the world won’t have conceptions, then as a result they enter a total of eight views and don’t go beyond them. There’s only the Buddha who can know this … *as before*.
+116\. “If ascetics and priests create theories about lacking conception in future eons and claim that the world won’t have conceptions, then as a result they enter a total of eight views and don’t go beyond them. There’s only the Buddha who can know this … <em>as before</em>.
 {:#p116}
 
-##### The World Will Have Neither Conceptions Nor No Conceptions
+#### The World Will Have Neither Conceptions Nor No Conceptions
 
 117\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great? Some ascetics and priests create theories about there being neither conception nor no conception in future eons and claim that the world will have neither conceptions nor no conceptions. They enter a total eight views about future eons in doing so. Creating theories about there being neither conception nor no conception in future eons and claiming that the world will have neither conceptions nor no conceptions, they don’t go beyond these eight views.
 {:#p117}
@@ -412,10 +412,10 @@ next: DA_22.html
 126\. “Some say, ‘When this life ends, I’ll be born neither with nor without limits and with neither conceptions nor no conceptions. This is true; the rest is false.’ This is the eighth view.
 {:#p126}
 
-127\. “If ascetics and priests create theories about there being neither conception nor no conception in future eons and claim that the world will have neither conceptions nor no conceptions, then as a result they enter a total of eight views and don’t go beyond them. There’s only the Buddha who can know this … *as before*.
+127\. “If ascetics and priests create theories about there being neither conception nor no conception in future eons and claim that the world will have neither conceptions nor no conceptions, then as a result they enter a total of eight views and don’t go beyond them. There’s only the Buddha who can know this … <em>as before</em>.
 {:#p127}
 
-##### Annihilationist Theories
+#### Annihilationist Theories
 
 128\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great…? Some ascetics and priests create annihilationist theories about future eons and claim sentient beings will be annihilated without remainder. They all enter seven views about future eons by doing so. Creating annihilationist theories about future eons and claiming that sentient beings will be annihilated without remainder, they don’t go beyond these seven views.
 {:#p128}
@@ -447,7 +447,7 @@ next: DA_22.html
 137\. “As a result of saying about future eons that these sentient beings will be annihilated without remainder, ascetics and priests enter seven views and don’t go beyond them. There’s only the Buddha who can know this … likewise as before.
 {:#p137}
 
-##### Nirvāṇa in the Present Life
+#### Nirvāṇa in the Present Life
 
 138\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great…? Some ascetics and priests create theories about future eons and Nirvāṇa in the present life, saying that sentient beings will have Nirvāṇa in the present. They all enter five views about future eons by doing so. Creating theories about future eons and Nirvāṇa in the present life, they don’t go beyond these five views.
 {:#p138}
@@ -513,9 +513,11 @@ next: DA_22.html
 157\. When Ānanda heard what the Buddha taught, he rejoiced and approved.
 {:#p157}
 
+---
+
 ### Notes
 
-1. {:#n1}Direct parallels include [DN 1](https://suttacentral.net/dn1) and an alternate Chinese translation, T 21. The Chinese title is translated as “Brahmā’s Shaking” (梵動), which suggests that the Sanskrit equivalent was Brahma**c**āla rather than Brahma**j**āla. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 21 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0088b12" target="_blank">T1.1.88b12-94a13</a>). Direct parallels include <a href="https://suttacentral.net/dn1" target="_blank">DN 1</a> and an alternate Chinese translation (<a href="https://cbetaonline.dila.edu.tw/zh/T0021_001" target="_blank">T21</a>). The Chinese title is translated as “Brahmā’s Shaking” (梵動), which suggests that the Sanskrit equivalent was Brahma<strong>c</strong>āla rather than Brahma<strong>j</strong>āla. [\[back\]](#ref1)
 2. {:#n2}This was in the capital of Magadha, Rājagṛha. [\[back\]](#ref2)
 3. {:#n3}The Chinese translates his name as “Good Thought” (善念). The alternate translation (T 21) transliterates his name as “Supi” (須卑) and a Tibetan translation bears a similar meaning to Skt. *Supriya (P. Suppiya). [\[back\]](#ref3)
 4. {:#n4}The Chinese is obscure, but it seems to correspond to descriptions checkered game boards in Theravāda commentaries (DA. I. p.85), which are termed “aṭṭhapadaṃ dasapadaṃ”. These Pali terms refer to game boards with eight and ten squares to a side. [\[back\]](#ref4)
