--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -8,7 +8,7 @@ next: DA_23.html
 ---
 
 # [The Long Discourses](index.html)
-### 22. Śroṇatāṇḍya
+## 22. Śroṇatāṇḍya
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Aṅga accompanied by a large assembly of 1,250 monks. They traveled among the people, stopping to stay at the city of Campā by the side of Gargā Pond.
 {:#p1}
@@ -257,9 +257,11 @@ He responded, “Very well! I’d be glad to hear it.”
 81\. When the priest Śroṇatāṇḍya heard what the Buddha taught, he rejoiced and approved.
 {:#p81}
 
+---
+
 ### Notes
 
-1. {:#n1}The direct parallel for this sutra is [DN 4](https://suttacentral.net/dn4){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 22 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0094a18" target="_blank">T1.1.94a18-6c15</a>). The direct parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/dn4" target="_blank">DN 4</a>. [\[back\]](#ref1)
 2. {:#n2}*Śroṇatāṇḍya*. This is a Sanskrit attestation equivalent to P. Soṇadaṇḍa that’s found in a Sarvâstivāda parallel to this sutra. The Chinese text translates his name as “Planting Virtue” (種德).[\[back\]](#ref2)
 3. {:#n3}*three Vedas*. The Chinese literally reads “the three-division hymns of the other training” (異學三部諷誦), which seems to be a roundabout description of the three Vedas of the Brahmanical tradition. [\[back\]](#ref3)
 4. {:#n4}*Arhat*. This term is often translated in different ways in Chinese when it occurs in this standard expression. Here it’s translated as “reached what’s real” or perhaps simply “fully realized” (至真). [\[back\]](#ref4)
