--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -8,7 +8,7 @@ next: DA_26.html
 ---
 
 # [The Long Discourses](index.html)
-### 25. The Naked Wanderer
+## 25. The Naked Wanderer
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the deer preserve near Karṇakāṣṭha of [Ujuññā].[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
 {:#p1}
@@ -147,9 +147,11 @@ The Buddha told Kāśyapa, “I would give you my assent, but it’s simply that
 41\. When Kāśyapa heard what the Buddha taught, he rejoiced and approved.
 {:#p41}
 
+---
+
 ### Notes
 
-1. {:#n1}The direct parallel for this sutra is [DN 8](https://suttacentral.net/dn8). [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 25 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0102c24" target="_blank">T1.1.102c24-4c15</a>). The direct parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/dn8" target="_blank">DN 8</a>. [\[back\]](#ref1)
 2. {:#n2}*Karṇakāṣṭha … [Ujuññā]*. Ch. 金槃 (kɪəm-buan) … 委若 (ɪuĕ-niak). While the Skt. attestation for P. Kaṇṇakathala is known, the equivalent of P. Ujuññā eludes me. The Chinese transliterations do seem to match these place names, but in another Indic language. [\[back\]](#ref2)
 
 ---
