--- a/01_agama/dirgha/DA_26.md
+++ b/01_agama/dirgha/DA_26.md
@@ -8,7 +8,7 @@ next: DA_27.html
 ---
 
 # [The Long Discourses](index.html)
-### 26. Knowledge of the Three Vedas
+## 26. Knowledge of the Three Vedas
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was travelling among the people of Kośala accompanied by a large assembly of 1,250 monks. He went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.
 {:#p1}
@@ -315,14 +315,15 @@ He answered, “He does.”
 72\. When Vāsiṣṭha and Bhāradvāja heard what the Buddha taught, they rejoiced and approved.
 {:#p72}
 
+---
+
 ### Notes
 
-1. {:#n1}The direct parallel for this sutra is [DN 13](https://suttacentral.net/dn13). [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 26 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0104c16" target="_blank">T1.1.104c16-7a14</a>). The direct parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/dn13" target="_blank">DN 13</a>. [\[back\]](#ref1)
 2. {:#n2}*[Tārukkha]*. Ch. 多梨車, MCh. ta-lɪi-tʃ’ɪă = \*Tariṣya(?). I’ve not found a Skt. attestation, so I’ve adopted the Pali parallel. [\[back\]](#ref2)
 3. {:#n3}*priests possessing the three Vedas*. Ch. 有三明婆羅門, P. tevijjāna brāhmaṇā. The Chinese translator interpreted P. tevijja as “three insights” (三明). Given that the term implied knowledge of the three Vedas, which wasn’t considered particularly insightful by the Buddha, I’ve opted to translate it as “three Vedas.” This also avoids confusion with the Buddhist redefinition of P. vijja to refer to three of the P. abhiññā rather than knowledge of the Vedas. [\[back\]](#ref3)
 4. {:#n4}This list of names occurs in DĀ 20, and the transliterations are detailed in [note 19](DA_20.html#n19). Here, there are a couple departures from that list. First, the name Vāmaka was omitted in early editions but added back in during the Song dynasty. I’ve added it tentatively, assuming the omission was an oversight. Second, the last name is transliterated as Ch. 婆羅損陀 (MCh. bua-la-suən-da = \*Varasunda). This is not a name that I’ve found in Sanskrit sources, so I’ve insert the name found in DĀ 20 (Sundara). [\[back\]](#ref4)
 5. {:#n5}*Manasākata*. Ch. 心念. The Chinese is a translation meaning “mind-thought” ( = Mānasaka?). [\[back\]](#ref5)
-
 
 ---
 
