--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -8,7 +8,7 @@ next: DA_20.html
 ---
 
 # [The Long Discourses](index.html)
-### 18. Personal Gladness
+## 18. Personal Gladness
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove. He was accompanied by a large assembly of 1,250 monks.
 {:#p1}
@@ -169,7 +169,7 @@ He replied, “I don’t know them.”
 42\. “He’s like the Bhagavān who strived courageously, possesses great wisdom, knowledge, and awareness, and attained the supreme awakening. Therefore, he’s called the Completely Awakened One.
 {:#p42}
 
-43\. “The Bhagavān isn’t pleased by desires, either. He isn’t pleased by the practices of crude and ordinary men, nor does he toil in mortifications. If he wishes to eliminate bad qualities, then the Bhagavān’s seclusion gives rise to joy and happiness with perception and examination, and he traverses the first dhyāna. *The second, third, and fourth dhyānas are likewise.* He strived courageously, possesses great wisdom, knowledge, awareness, and attained the supreme awakening. Therefore, he’s called the Completely Awakened One.”
+43\. “The Bhagavān isn’t pleased by desires, either. He isn’t pleased by the practices of crude and ordinary men, nor does he toil in mortifications. If he wishes to eliminate bad qualities, then the Bhagavān’s seclusion gives rise to joy and happiness with perception and examination, and he traverses the first dhyāna. <em>The second, third, and fourth dhyānas are likewise.</em> He strived courageously, possesses great wisdom, knowledge, awareness, and attained the supreme awakening. Therefore, he’s called the Completely Awakened One.”
 {:#p43}
 
 
@@ -208,9 +208,11 @@ He replied, “I don’t know them.”
 54\. When Śāriputra heard what the Buddha taught, he rejoiced and approved.
 {:#p54}
 
+---
+
 ### Notes
 
-1. {:#n1}The direct parallels for this sutra are [DN 28](https://suttacentral.net/dn28){:target="_blank"}, [SN 47.12](https://suttacentral.net/sn47.12){:target="_blank"}, SĀ 3.35 (T 99.498), and T 18. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 18 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0076b23" target="_blank">T1.1.76b23-9a29</a>). The direct parallels for this <em>sūtra</em> are <a href="https://suttacentral.net/dn28" target="_blank">DN 28</a>, <a href="https://suttacentral.net/sn47.12" target="_blank">SN 47.12</a>, <a href="https://suttacentral.net/sa498" target="_blank">SĀ 3.35</a> (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0130c07" target="_blank">T99.498</a>), and <a href="https://cbetaonline.dila.edu.tw/zh/T0018_0001" target="_blank">T18</a>. [\[back\]](#ref1)
 2. {:#n2}*such liberation, and such halls of liberation.* Ch.如是解脫、如是解脫堂. The Pali parallel reads: *evaṁvihārī … evaṁvimuttā*. The Chinese translator consistently renders Skt. *vihāra* literally as 堂 (“meeting hall” or “temple”) throughout DĀ, despite it’s apparent figurative meaning in passages like this one. [\[back\]](#ref2)
 3. {:#n3}*Nirvāṇa.* Ch. 滅度. In his essay “Nirvāṇa Has No Name,” Sengzhao, a student of Kumārajīva, explained that this Chinese translation captures two readings of Nirvāṇa as the final cessation (滅) of suffering and the crossing over (度) of the four floods (cf. T 1858.157c2). As such, it’s difficult to translate to English as a single concept, so I’ve reverted to the Sanskrit. [\[back\]](#ref3)
 4. {:#n4}*believe the practice of right view.* Ch. 見正信行. I suspect the word order of this phrase is corrupt, that perhaps it should read 信正見行. The Pali parallel reads *sammādiṭṭhikā sammādiṭṭhikammasamādānā*, which means “holding right views and acting out right views.” [\[back\]](#ref4)
