--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -8,29 +8,29 @@ next: DA_24.html
 ---
 
 # [The Long Discourses](index.html)
-### 23. Kūṭatāṇḍya
+## 23. Kūṭatāṇḍya
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in the country of Kośala accompanied by a large assembly of 1,250 monks. Touring among the people, they arrived north of the priest town of [Khānumata][\[2\]](#n2){:#ref2} in Kośala and stopped to stay in a rosewood grove.
 {:#p1}
 
 #### The Priest Kūṭatāṇḍya
 
-2\. There was a priest named Kūṭatāṇḍya[\[3\]](#n3){:#ref3} who lived in \[Khānumata\]. The town was bountiful, and the people were flourishing. It had scenic parks, bathing ponds, and refreshing trees. King Prasenajit had granted this town to the priest Kūṭatāṇḍya as his priestly due. This priest was descended from seven generations of fathers and mothers who were genuine, so he wasn’t slighted by others. He had mastered the three Vedas, could discern all the various kinds of scriptures, and was learned about all the subtleties of worldly literature. He was also skilled in the way of the great man’s signs, divining fortune and misfortune, and ritual sacrifices and etiquette. He had 500 disciples whom he taught without exception.
+2\. There was a priest named Kūṭatāṇḍya[\[3\]](#n3){:#ref3} who lived in [Khānumata]. The town was bountiful, and the people were flourishing. It had scenic parks, bathing ponds, and refreshing trees. King Prasenajit had granted this town to the priest Kūṭatāṇḍya as his priestly due. This priest was descended from seven generations of fathers and mothers who were genuine, so he wasn’t slighted by others. He had mastered the three Vedas, could discern all the various kinds of scriptures, and was learned about all the subtleties of worldly literature. He was also skilled in the way of the great man’s signs, divining fortune and misfortune, and ritual sacrifices and etiquette. He had 500 disciples whom he taught without exception.
 {:#p2}
 
 3\. That priest was about to arrange a large sacrifice at the time. He had acquired 500 bulls, 500 cows, 500 bull calves, 500 heifer calves, 500 ewes, and 500 wethers to offer as sacrifices.
 {:#p3}
 
-4\. The priests, prominent men, and householders of \[Khānumata\] heard: “The ascetic Gautama of the Śākyans who left home and achieved awakening has been touring among the people of Kośala. He arrived north of \[Khānumata\] and stopped to stay in the rosewood grove there. His great fame is heard throughout the world: ‘He’s a Tathāgata, Arhat, and Completely Awakened One who has perfected the ten epithets!’ Among gods and worldly people, be they Māras, Brahmās, ascetics, or priests, he teaches for others what he himself has realized. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life. It’s fitting to have an audience with such a realized person.”
+4\. The priests, prominent men, and householders of [Khānumata] heard: “The ascetic Gautama of the Śākyans who left home and achieved awakening has been touring among the people of Kośala. He arrived north of [Khānumata] and stopped to stay in the rosewood grove there. His great fame is heard throughout the world: ‘He’s a Tathāgata, Arhat, and Completely Awakened One who has perfected the ten epithets!’ Among gods and worldly people, be they Māras, Brahmās, ascetics, or priests, he teaches for others what he himself has realized. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life. It’s fitting to have an audience with such a realized person.”
 {:#p4}
 
-5\. They then said, “We’d better go and pay him a visit now!” After they said that, they followed each other as they left \[Khānumata\]. Crowds of people headed out to visit the Buddha.
+5\. They then said, “We’d better go and pay him a visit now!” After they said that, they followed each other as they left [Khānumata]. Crowds of people headed out to visit the Buddha.
 {:#p5}
 
 6\. The priest Kūṭatāṇḍya was up in the upper story of his house and saw the crowds of people following each other from a distance. He asked his attendant, “What’s the reason those crowds of people are following each other? Where are they going?”
 {:#p6}
 
-7\. His attendant said, “I heard this: ‘The ascetic Gautama of the Śākyans who had left the home life and achieved awakening has been touring among the people of Kośala. He arrived north of \[Khānumata\] and stopped to stay in the rosewood grove there. His great fame is heard throughout the world: “He’s a Tathāgata, Arhat, and Completely Awakened One who has perfected the ten epithets!” Among gods and worldly people, be they Māras, Brahmās, ascetics, or priests, he teaches for others what he himself has realized. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life.’ Those crowds of priests, prominent people, and householders from the town are going to pay a visit to the ascetic Gautama.”
+7\. His attendant said, “I heard this: ‘The ascetic Gautama of the Śākyans who had left the home life and achieved awakening has been touring among the people of Kośala. He arrived north of [Khānumata] and stopped to stay in the rosewood grove there. His great fame is heard throughout the world: “He’s a Tathāgata, Arhat, and Completely Awakened One who has perfected the ten epithets!” Among gods and worldly people, be they Māras, Brahmās, ascetics, or priests, he teaches for others what he himself has realized. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life.’ Those crowds of priests, prominent people, and householders from the town are going to pay a visit to the ascetic Gautama.”
 {:#p7}
 
 8\. The priest Kūṭatāṇḍya then instructed his attendant: “Quickly, remember what I say. Go tell those people this: ‘Everyone, wait a little while for me. We’ll go pay a visit to that ascetic Gautama together.’”
@@ -50,7 +50,7 @@ next: DA_24.html
 12\. At the time, another five hundred priests were already seated outside his door, waiting to help Kūṭatāṇḍya prepare his large sacrifice. When they saw the priest Kūṭatāṇḍya coming, they all rose and greeted him. They said, “Great priest, where are you going?”
 {:#p12}
 
-13\. Kūṭatāṇḍya replied, “I’ve heard this: ‘The ascetic Gautama of the Śākyans who had left the home life and achieved awakening has been touring among the people of Kośala. He arrived north of \[Khānumata\], and stopped to stay in the rosewood grove there. His great fame is heard throughout the world: “He’s a Tathāgata, Arhat, and Completely Awakened One who has perfected the ten epithets!” Among gods and worldly people, be they Māras, Brahmās, ascetics, or priests, he teaches for others what he himself has realized. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life. It’s fitting to have an audience with such a realized person.’
+13\. Kūṭatāṇḍya replied, “I’ve heard this: ‘The ascetic Gautama of the Śākyans who had left the home life and achieved awakening has been touring among the people of Kośala. He arrived north of [Khānumata], and stopped to stay in the rosewood grove there. His great fame is heard throughout the world: “He’s a Tathāgata, Arhat, and Completely Awakened One who has perfected the ten epithets!” Among gods and worldly people, be they Māras, Brahmās, ascetics, or priests, he teaches for others what he himself has realized. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life. It’s fitting to have an audience with such a realized person.’
 {:#p13}
 
 14\. “Priests, I’ve also heard that Gautama knows the three kinds of ritual sacrifice and sixteen ritual requisites. Now, previous generations and elders in our assembly haven’t known these things, but I want to make a great sacrifice and have prepared the cattle and sheep for it. I’m going to visit Gautama to ask him about the three kinds of ritual sacrifice and sixteen ritual requisites. Once we’ve acquired these ways of ritual sacrifice, we’ll perfect their virtues, and our fame will be heard far and wide.”
@@ -503,9 +503,11 @@ Should support the three jewels.”
 146\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p146}
 
+---
+
 ### Notes
 
-1. {:#n1}This sutra is parallel to [DN 5](https://suttacentral.net/dn5){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 23 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0096c16" target="_blank">T1.1.96c16-101b8</a>).This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/dn5" target="_blank">DN 5</a>. [\[back\]](#ref1)
 2. {:#n2}*[Khānumata]*. Ch. 佉㝹婆提 (MCh. K’ia-neu-b’ua-d’iei) suggests a different pronunciation, such as *Khanuvati. A Sanskrit edition exists that would provide a parallel name for this town, but it remains unpublished to date. I’ve retained the Pali name for the time being. [\[back\]](#ref2)
 3. {:#n3}*Kūṭatāṇḍya*. Ch. 究羅檀頭 (MCh. Kieu-la-d’an-d’eu), P. Kūṭadanta. I’ve adopted the Skt. attestation, but the Chinese transliteration suggests something like \*Kulatandu. [\[back\]](#ref3)
 4. {:#n4}See the notes to [DĀ 20](DA_20.html#notes){: target="_blank"} for comments about the various proper names in this and the next couple paragraphs. [\[back\]](#ref4)
