--- a/01_agama/dirgha/DA_24.md
+++ b/01_agama/dirgha/DA_24.md
@@ -8,7 +8,7 @@ next: DA_25.html
 ---
 
 # [The Long Discourses](index.html)
-### 24. Dhruva
+## 24. Dhruva
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
 {:#p1}
@@ -147,9 +147,11 @@ The Buddha told the prominent man’s son, “This monk’s name was Aśvajit.[\
 36\. When the prominent man’s son Dhruva heard what the Buddha taught, he rejoiced and approved.
 {:#p36}
 
+---
+
 ### Notes
 
-1. {:#n1}The direct parallel for this sutra is [DN 11](https://suttacentral.net/dn11). [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 24 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0101b14" target="_blank">T1.1.101b14-2c23</a>). The direct parallel for this sutra is <a href="https://suttacentral.net/dn11" target="_blank">DN 11</a>. [\[back\]](#ref1)
 2. {:#n2}Ch. 那難陀, MCh. “na-nan-da,” P. Nāḷandā. Ch. 波婆利掩次, MCh. “pua-bua-lji-iam-tsi,” P. Pavārikamba. I’ve adopted the Skt. equivalent of the Chinese transliterations. [\[back\]](#ref2)
 3. {:#n3}*Dhruva*. Ch. 堅固. This back-translation is an educated guess based on the Chinese translation of his name as “steadfast,” which differs from the Pali and Sanskrit interpretation of Kevaddha or Kaivarta as meaning “fisherman” or “mariner.” We should note that the Sarvâstivāda version of this sutra agrees with the Theravāda in naming the interlocutor Kaivartin, which is a Sanskritization of Kevaṭṭa. A Chinese transliterated equivalent of Kevaṭṭa (鷄筏多) is found in Xuanzang’s *Mahāvibhāṣā* (another Sarvâstivāda source), which quotes this sutra’s introduction at T1545.531c6-532a15. A classical Chinese glossary (T2130.1021a11) interprets a close equivalent of that transliteration (鷄和哆) to mean “fisherman” like P. Kevaddha. [\[back\]](#ref3)
 4. {:#n4}*Gola*. Ch. 瞿羅. This is a guess at an obscure transliteration. Both DN 11 and *Mahāvibhāṣā* (T1545.531c26) cite a spell called Gandhārī (健馱梨, c.f. T2128.767c7). In this version, the second spell will be called Gandhārī, which will be called Māṇikā in DN 11 and Kṣaṇika (刹尼迦) in the *Mahāvibhāṣā* (T1545.532a5). [\[back\]](#ref4)
