--- a/01_agama/samyukta/02/SA2_123-125.md
+++ b/01_agama/samyukta/02/SA2_123-125.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 2. The Sense Fields | 123-125 (230). Samṛddhi'
 type: kramdown
 base: ../../../
-previous: SA2_8.html
+previous: SA2_58-74.html
 next: SA2_124.html
 ---
 
