--- a/01_agama/samyukta/02/SA2_8.md
+++ b/01_agama/samyukta/02/SA2_8.md
@@ -4,10 +4,10 @@ title: 'The Related Discourses | 2. The Sense Fields | 8 (192). Free of Desire'
 type: kramdown
 base: ../../../
 previous: SA2_7.html
-next: SA2_123.html
+next: SA2_9.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>2. The Sense Fields</a></h2>
 
 <table class="trans">
